new memo : a letter to books

--- a/memos/memo-24.html
+++ b/memos/memo-24.html
@@ -39,6 +39,7 @@
                 </div>
                 <div class="article-navigation">
                     <a href="memo-23.html" class="nav-button prev">← Previous Memo</a>
+                    <a href="memo-25.html" class="nav-button next">Next Memo →</a>
                 </div>
             </article>
         </div>
