--- a/memos/memo-25.html
+++ b/memos/memo-25.html
@@ -35,8 +35,7 @@
                     <p>I have started to celebrate the departure of 2025 and am waiting with an enormous amount of hope to welcome 2026. But it was not the same with the beginning of 2024.</p>
                     <p><br>Jan 2024, I was clueless about where I was moving. I was questioning every decision I took in my life till that time. Desperation and anxiety were filling my emotional life. Probably this was a smaller problem as compared to the fact that I was expected to pretend that everything was as usual.</p>
                     <p><br>Somehow, I was pretending to the external world. But for how long can one pretend to the self? Slowly and gradually, negative emotions were taking charge. Irritation became a little familiar territory which was very unusual for me.</p>
-                    <p><br>I was facing all this for the first time. I had no clue on how to counter this. And no one sensed where I was heading.</p>
-                    <p><br>During this phase of life, when I was struggling to seek the meaning of life &#8211; I thought of making a visit to the book fair.</p>
+                    <p><br>I was facing all this for the first time. I had no clue on how to counter this. And no one sensed where I was heading. During this phase of life, when I was struggling to seek the meaning of life &#8211; I thought of making a visit to the book fair.</p>
                     <p><br>I had been to the book fair earlier as well, but never in desperation. Never to seek answers. But this time it was different. I was seeking an intimate friend who would teach me how to get out of this mess without letting anyone sense my miseries.</p>
                     <p><br>With this hope, I started the journey with you for the first time. And I wasn&#8217;t disappointed at all.</p>
                     <p><br>Biographies presented through you gave me a compass for life and made me realise how people have conquered themselves before conquering the world.</p>
