--- a/memos/memo-25.html
+++ b/memos/memo-25.html
@@ -47,6 +47,7 @@
                 </div>
                 <div class="article-navigation">
                     <a href="memo-24.html" class="nav-button prev">← Previous Memo</a>
+                    <a href="memo-26.html" class="nav-button next">Next Memo →</a>
                 </div>
             </article>
         </div>
