--- a/memos/memo-18.html
+++ b/memos/memo-18.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memo #18: Finding our own Race - A Digital Diary</title>
+    <title>Memo #18: 3-0NZ and Lesson to learn - A Digital Diary</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -29,13 +29,11 @@
             </div>
 
             <article class="diary-article">
-                <h2>Finding our own Race</h2>
-                <p class="article-date">November 8, 2024</p>
+                <h2>3-0NZ and Lesson to learn</h2>
+                <p class="article-date">November 3, 2024</p>
                 <div class="article-content">
-<p>A false proposition : Learning is Stressful. The culprit seems to be the RACE to learn. Learning at our own pace seems pretty satisfying. Yet, we are cultured to go for the race.</p>
-                        <p>Undeniably, race is important for survival. And race does provide a pin pointed goal to be achieved. But, the survival is not at stake all the time. And no worthwhile discovery has ever been made by the race. Novelty demands peaceful and curious mind. Yet, we seem to be in the race at all point in time.</p>
-                        <p>One more argument that goes in favor of racing is "helps in achieving your true potential". I have a slight disagreement with this statement as well. It's not the race but the fire in the form of burning desire helps one to achieve its true potential. The burning desire could come from the childhood humiliation, emotional void, social discrimination etc. So if we are already well fitted into a society or we have found solace in solitude, there is very less zeal to burn the midnight oil. Hence the race doesn't matter for such individuals as well.</p>
-                        <p><em>The way to reach the true potential goes through self reflection and finding our own pace to determine our own race</em>. This would require courage to accept the reality and the zeal to slow down inspite of the pressure to move quickly. But isn't it worth showing the courage?</p>
+<p>Within two years of time, Rohit Sharma led India to an impeccable run in the 2023 ODI World Cup just to lose the final against the mighty Aussies to a Desperate win from no where in the 2024 T20 world Cup Final against South Africa. While Rohit was just enjoying the time at the peak, lost 3-0 in test series against the least expected team(NZ) at the least Expected place(India).</p>
+                        <p>This life seems to be pretty much similar for everyone. One day you feel as if you are on the top and the next day you don't find a place to hide yourself. I hope Rohit would find a place to hide as he did post 2023 WC final loss.</p>
                 </div>
                 <div class="article-navigation">
                     <a href="memo-17.html" class="nav-button prev">← Previous Memo</a>
