--- a/memos/memo-25.html
+++ b/memos/memo-25.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memo #25: A Letter to Books - A Digital Diary</title>
+    <title>Memo #25: Lost yet Found - A Digital Diary</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -29,21 +29,13 @@
             </div>
 
             <article class="diary-article">
-                <h2>A Letter to Books</h2>
-                <p class="article-date">December 26, 2025</p>
+                <h2>Lost yet Found</h2>
+                <p class="article-date">December 20, 2025</p>
                 <div class="article-content">
-                    <p>I have started to celebrate the departure of 2025 and am waiting with an enormous amount of hope to welcome 2026. But it was not the same with the beginning of 2024.</p>
-                    <p><br>Jan 2024, I was clueless about where I was moving. I was questioning every decision I took in my life till that time. Desperation and anxiety were filling my emotional life. Probably this was a smaller problem as compared to the fact that I was expected to pretend that everything was as usual.</p>
-                    <p><br>Somehow, I was pretending to the external world. But for how long can one pretend to the self? Slowly and gradually, negative emotions were taking charge. Irritation became a little familiar territory which was very unusual for me.</p>
-                    <p><br>I was facing all this for the first time. I had no clue on how to counter this. And no one sensed where I was heading. During this phase of life, when I was struggling to seek the meaning of life &#8211; I thought of making a visit to the book fair.</p>
-                    <p><br>I had been to the book fair earlier as well, but never in desperation. Never to seek answers. But this time it was different. I was seeking an intimate friend who would teach me how to get out of this mess without letting anyone sense my miseries. With this hope, I started the journey with you for the first time. And I wasn&#8217;t disappointed at all.</p>
-                    <p><br>Biographies presented through you gave me a compass for life. This made me realise how people have conquered themselves before conquering the world. The words of self-help strengthened my mental fortitude and allowed me to appreciate the fact that I was suffering much more in imagination than in reality. The philosophies coming through you filled my heart with warmth, love and joy. The timeless wisdom slowly began to penetrate through me.</p>
-                    <p><br>Gradually, you led me to see life again through the lens of hope and freedom. Probably this made me come out of my own imaginative cage.</p>
-                    <p><br>Couldn&#8217;t have been more grateful to you for carrying the words of Yogi Paramahansa Yogananda Ji through <em>Autobiography of a Yogi.</em> This completely changed my perspective on life. The belief in the philosophy of Karma was re-established. The slow spiritual awakening began to take place (yet there is a long way to go).</p>
-                    <p><br>Above and beyond this, I had found a friend who talks with me in my desperate time, who fills me with the warmth and joy whenever I demand and in return asks for nothing. Apart from this, you have filled me with courage to see the world as is.</p>
-                    <p><br>Without a shadow of doubt, there is a long way to go with you, but it was important to reflect and cherish the joy you have brought to my life. I wish many more would seek and find your companionship to embark on an adventurous journey.</p>
-                    <p><br>Yours truly<br>An Ordinary Human</p>
-                    <p>Some of the voices that spoke to me through you were:<br />1. The Alchemist (Paulo Coelho)<br />2. The Ignited minds (APJ Kalam)<br />3. The Art of Happiness (Dalai Lama)<br />4. Power of Now (Eckhart Tolle)<br />5. As a man thinketh (James Allen)<br />6. Tuesday with Morrie (Mitch Alboom)<br />7. Man&#8217;s search for meaning (Viktor Frankl)<br />8. Zen Mind, Beginner&#8217;s mind (Shunryu Suzuki)<br />9. Rashmi Rathi (Ramdhari Singh Dinkar)<br />10. Ikigai (Hector Gracia)<br />11. Empires of the Mind (Danis Waitley)<br />12. The Power of Subconscious mind (Dr Joseph Murphy)<br />13. The 5 AM club (Robin Sharma)<br />14. An Old Monk who sold his Ferrari (Robin Sharma)<br />15. Atomic Habits (James Clear)<br />16. Grit (Angela Duckworth)<br />17. One thing (Gary Keller)<br />18. Flow (Mihaly Csikszentmihaly)<br />19. Homo Deus (Yuval Noah Harari)<br />20. The Kite Runner (Khaled Hosseini)<br />&#8230;&#8230;.. And many more to come</p>
+<p>There was a girl named Vidya, light hearted and joyful. She had her own aspirations and ambitions. Yet, fate had probably other plans. She got married just after giving the class eleventh examination. That too in a patriarchal family. But the husband was caring and loving. Three years after the marriage, she gave birth to a baby boy.</p>
+                        <p>One day she was completely lost in her thoughts. The mundane life was making her feel jailed. All the ambitions were probably transferred to the next life. And no one was there to share all this, not even her husband. Soon the thoughts turned into painful thoughts and the pain began to find their way to the outside world through her eyes. The drop of tears in no time reached her cheeks.</p>
+                        <p>Suddenly, she realized there was the tender and soft hand trying his best to wipe away the tear and at the same time trying all possible ways in his capacity to make her feel better.</p>
+                        <p>She was deeply touched to see this and in no time she had probably found the purpose of her life to be alive and joyful yet again.</p>
                 </div>
                 <div class="article-navigation">
                     <a href="memo-24.html" class="nav-button prev">← Previous Memo</a>
