--- a/memos/memo-17.html
+++ b/memos/memo-17.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memo #17: 3-0NZ and Lesson to learn - A Digital Diary</title>
+    <title>Memo #17: A curious Student - A Digital Diary</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -29,11 +29,21 @@
             </div>
 
             <article class="diary-article">
-                <h2>3-0NZ and Lesson to learn</h2>
-                <p class="article-date">November 3, 2024</p>
+                <h2>A curious Student</h2>
+                <p class="article-date">October 26, 2024</p>
                 <div class="article-content">
-<p>Within two years of time, Rohit Sharma led India to an impeccable run in the 2023 ODI World Cup just to lose the final against the mighty Aussies to a Desperate win from no where in the 2024 T20 world Cup Final against South Africa. While Rohit was just enjoying the time at the peak, lost 3-0 in test series against the least expected team(NZ) at the least Expected place(India).</p>
-                        <p>This life seems to be pretty much similar for everyone. One day you feel as if you are on the top and the next day you don't find a place to hide yourself. I hope Rohit would find a place to hide as he did post 2023 WC final loss.</p>
+<p><strong><em>Student</em></strong> : Is knowledge essential to make money?</p>
+                        <p><strong>Teacher</strong> : No dear, absolutely not.</p>
+                        <p><strong><em>Student</em></strong> : Then, what is needed to make money?</p>
+                        <p><strong>Teacher</strong> : Skill set dear.</p>
+                        <p><strong><em>Student</em></strong> : What skill set sir?</p>
+                        <p><strong>Teacher</strong> : Any, that can increase productivity or could help in production and maintenance of society. From barber to manager. Anything.</p>
+                        <p><strong><em>Student</em></strong> : Then why should I seek Knowledge?</p>
+                        <p><strong>Teacher</strong> : Dear, <strong><em>Vidya Dadati Vinayam</em></strong>. That's it. It is for nothing else.</p>
+                        <p><strong><em>Student</em></strong> : Are books the only way to seek knowledge?</p>
+                        <p><strong>Teacher</strong> : No dear, Absolutely not.</p>
+                        <p><strong><em>Student</em></strong> : So, what are the other ways.</p>
+                        <p><strong>Teacher</strong> : Any, that can possibly break you.</p>
                 </div>
                 <div class="article-navigation">
                     <a href="memo-16.html" class="nav-button prev">← Previous Memo</a>
