--- a/memos/memo-22.html
+++ b/memos/memo-22.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memo #22: Just Blabbering - A Digital Diary</title>
+    <title>Memo #22: This is about You - A Digital Diary</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -29,17 +29,20 @@
             </div>
 
             <article class="diary-article">
-                <h2>Just Blabbering</h2>
-                <p class="article-date">February 20, 2025</p>
+                <h2>This is about You</h2>
+                <p class="article-date">January 21, 2025</p>
                 <div class="article-content">
-<p>Conceive an idea and nurture it for long enough. You will realize the pain of not seeing your brain child reaching to it's true potential.</p>
-                        <p>This will help you to understand the pain, the parents feel, when their childrens deviate from their path. As the conceivers of an idea have no vested interest except taking it to its true potential, so are the parents.</p>
-                        <p>Parents may seem to be too rude to their childrens. But, my dear friends, they just want to protect their childrens from the bitter experiences and nothing else.</p>
-                        <p>The beauty of the family system is highly underestimated and undervalued. Let's try our best to preserve this beauty.</p>
-                        <p>One last observation before letting you go. When we were a child, Parents didn't threw us into the dustbin, if we were crying for useless things. Rather they stayed patient and allowed themselves to go through sleepless nights.</p>
-                        <p>So, if we have grown up and may see the world better than them. It's only because of them. They pushed us beyond their capabilities.</p>
-                        <p>Let's say, now, they are crying for so called useless things in our view. Should we not be a little bit patient and hold their hands to see the beautiful world that we see? Anyway, who wish to see the beauties of the world alone. Let's ask ourselves, can we be a little bit tolerant to the "nuisance" Of our parents as they were with us in our childhood??</p>
-                        <p>At the end, thanks a lot for coming along with me this far and listening to me so patiently. And sorry, if I made any remarks that possibly made you feel bad.</p>
+<p>My Dear Friends,</p>
+                        <p>No matter where you are, no matter who you are. Just begin. Just begin to move. Show courage to jump of the ship. Let's create an ecosystem where no one is behind and no one is discriminated. The question you might have is how?</p>
+                        <p>Friends, let me tell you, you dream. You dream as far as you can. But just make sure that the dream is to serve the people and not the self. There is a reason to make such statement. All of us will die some day. How do we want to have our ending? Ain't we all seeking love?</p>
+                        <p>So the moment you will place the self out of the equation, entire gambit of opportunity will open up in your head space.</p>
+                        <p>We are all sons and daughters of God. So let's place out faith in the Almighty and work for the good of the people. There is nothing more powerful than faith in the God and the Good.</p>
+                        <p>Don't feel you are anyway lesser than anyone. Shade off the fears that is causing the blockade in your headspace. Take a leap of faith and jump into the waters of uncertainty. The disciplined people and best minds should not succumb to the mental slavery of the present generation. Ask yourself, do you want to pursue what you are doing. Ask yourself, are you satisfied with what you have. Search for your passion and desires. Look for creating bigger impact in the world. There are only two ways to create great works "either you love what you do, or do what you love".</p>
+                        <p>Let me tell you upfront, this won't be going to be easy. But always remember "everything is hard at first, messy in the middle and gorgeous at the end". The tree to the heaven have it's roots to the hell.</p>
+                        <p>Anything and everything that seemed impossible a few decades ago is the reality of present generation. Be it the computers, smartphones, robots, self driving cars, travel to the space and many more.</p>
+                        <p>The commonality among all these successful ambitions have been simple : First, think big. Second, think for all. And third, keep on repeating the first and the second step. Above all, place your faith in the Almighty and wait for the magic to take place. The God will test you in every possible way before making your dreams into reality. So, cultivate the art of patience and develop the art of learning to keep up the pace with the changing dynamic environment.</p>
+                        <p>Last but not the least, make sure you are not copying anyone. Learning and copying are two different things. Copying can only take you as far as the one you have copied. While learning has the potential to push you off the gravity. So be a lifelong learner to be the best version of the self.</p>
+                        <p>I must also confess, these are not anything new. I am just yet another messenger of the realm of dreamers. Thanks a lot for being with me this far. You can rest and Dream now. As this was all about you.</p>
                 </div>
                 <div class="article-navigation">
                     <a href="memo-21.html" class="nav-button prev">← Previous Memo</a>
