--- a/memos/memo-23.html
+++ b/memos/memo-23.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memo #23: The Traffic Signal - A Digital Diary</title>
+    <title>Memo #23: Just Blabbering - A Digital Diary</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -29,23 +29,17 @@
             </div>
 
             <article class="diary-article">
-                <h2>The Traffic Signal</h2>
-                <p class="article-date">May 18, 2025</p>
+                <h2>Just Blabbering</h2>
+                <p class="article-date">February 20, 2025</p>
                 <div class="article-content">
-<p>Everytime I cross the traffic signal and see the young childrens begging for pennies, raises some serious questions in my headspace. And I thought of penning down few of them.</p>
-                        <p>Let us begin with the first and the foremost question : How would we have wanted the people to react, have we been in their shoes?</p>
-                        <p>The most ideal answer which appears to my mind : the expectation of being helped if not financially at least emotionally (as it seems to be quite abundant in the nature).</p>
-                        <p>But the idealism seems to fall on it's face as I and the people like me are hardwired and trained since childhood to ignore them with utmost shameless conviction. The principles reasoning behind such training lies in the fear that if we will help them, soon we will find our feet in their shoes.</p>
-                        <p>And there begins my disagreement. The child in me begins to ask the simple question. How can God not help the people who is trying to help other? What is point of nurturing kids to become a good human being? Does being compassionate not part of a good human being? And I tend to find no concrete answers.</p>
-                        <p>Yet, the experience of the people from the past teaches that there is nothing better than the act of giving in life. Winston Churchill said "we make a living by what we get and we make the life by what we give".</p>
-                        <p>One other argument that people places : these childrens are being punished for their past karma. Honestly, I have no concrete reason to discard it. But, at the same time I tend to ask, what about our karma. The karma of ignoring in spite of knowing the cure of suffering of others. The karma of being apathetic to their condition.</p>
-                        <p>In one way or the other, the reasonable answer which seems to be convincing : we are trained in a wrong manner. This is simply against being humane.</p>
-                        <p>Anyway, who cares. The next question that plagues me : why are we so discontent and dissatisfied in our life? Don't we see these hopeless childrens? They simply have no future in their eyes. I am not sure, if they are aware of the word future.</p>
-                        <p>Yet, the people crossing the signal on their simple Motorbike or the Porsche seems to be discontent and anxious in spite of having if not anything else then hope. How can someone feel discontent in the face of hope. Ain't they missing the crux of life?</p>
-                        <p>Every single time, the traffic signal, reminds us of the privilege we have. Yet, we are fighting for more privilege than to share them with others. Why? How fighting and racing serves good for any human being?</p>
-                        <p>Should we not remind ourselves that we have come so far that we don't even see or sense the pain of the one's left far behind in the race of hope? Should we not pause and think for few seconds after crossing the signal?</p>
-                        <p>No doubt, we need to progress more and more and that is how evolution works. The technology is also evolving at an unprecedented pace as ever. But, somehow that is not helping us to become more humane.</p>
-                        <p>Let us take the lesson from the traffic signals from our country and place some brakes on our greed to have more content life for ourselves as well as to create a more harmonious society. Isn't it?</p>
+<p>Conceive an idea and nurture it for long enough. You will realize the pain of not seeing your brain child reaching to it's true potential.</p>
+                        <p>This will help you to understand the pain, the parents feel, when their childrens deviate from their path. As the conceivers of an idea have no vested interest except taking it to its true potential, so are the parents.</p>
+                        <p>Parents may seem to be too rude to their childrens. But, my dear friends, they just want to protect their childrens from the bitter experiences and nothing else.</p>
+                        <p>The beauty of the family system is highly underestimated and undervalued. Let's try our best to preserve this beauty.</p>
+                        <p>One last observation before letting you go. When we were a child, Parents didn't threw us into the dustbin, if we were crying for useless things. Rather they stayed patient and allowed themselves to go through sleepless nights.</p>
+                        <p>So, if we have grown up and may see the world better than them. It's only because of them. They pushed us beyond their capabilities.</p>
+                        <p>Let's say, now, they are crying for so called useless things in our view. Should we not be a little bit patient and hold their hands to see the beautiful world that we see? Anyway, who wish to see the beauties of the world alone. Let's ask ourselves, can we be a little bit tolerant to the "nuisance" Of our parents as they were with us in our childhood??</p>
+                        <p>At the end, thanks a lot for coming along with me this far and listening to me so patiently. And sorry, if I made any remarks that possibly made you feel bad.</p>
                 </div>
                 <div class="article-navigation">
                     <a href="memo-22.html" class="nav-button prev">← Previous Memo</a>
