--- a/memos/memo-26.html
+++ b/memos/memo-26.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memo #26: Sannata - A Digital Diary</title>
+    <title>Memo #26: A Letter to Books - A Digital Diary</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -29,16 +29,25 @@
             </div>
 
             <article class="diary-article">
-                <h2>Sannata</h2>
-                <p class="article-date">December 30, 2025</p>
+                <h2>A Letter to Books</h2>
+                <p class="article-date">December 26, 2025</p>
                 <div class="article-content">
-                    <p>Rosy was giggling from the next cubicle. Harshi was asking someone a question. And a band of newly joined college grads were talking as loudly as they could without giving heed to their surroundings. Some were feeling irritated, some joyful while many were just moving with the flow. This is how our office was a few days back. A place where we were reaching with same enthusiasm every single day.</p>
-                    <p><br>Now we have reached closer to the end of year. Most of them are on vacation except few. There is an awkward silence on the floor of the office. The things that once seemed irritating now seem to be missing. The days are getting longer for people visiting the same place. Although nothing has changed. The high rise building, the symmetrical complex, the food court, the trees and the roads : everything is there. Yet everything seems to be empty as the humans are missing.</p>
-                    <p><br>This makes me ponder, what is it that makes an office, an office. Or for that matter even a life, a life. The human seems to be the most apt answer. Even if the place would have not been as sophisticated as the offices are, yet if a bunch of people with kind intent sit together, would make the same place heaven.</p>
-                    <p><br>Anyway, the sannata of office will end soon as the new year is soon to begin. The chuckling and giggling will return to its place. The emptiness will be filled with joy again. The life will again be back to these glass houses. And move on once again.</p>
+                    <p>I have started to celebrate the departure of 2025 and am waiting with an enormous amount of hope to welcome 2026. But it was not the same with the beginning of 2024.</p>
+                    <p><br>Jan 2024, I was clueless about where I was moving. I was questioning every decision I took in my life till that time. Desperation and anxiety were filling my emotional life. Probably this was a smaller problem as compared to the fact that I was expected to pretend that everything was as usual.</p>
+                    <p><br>Somehow, I was pretending to the external world. But for how long can one pretend to the self? Slowly and gradually, negative emotions were taking charge. Irritation became a little familiar territory which was very unusual for me.</p>
+                    <p><br>I was facing all this for the first time. I had no clue on how to counter this. And no one sensed where I was heading. During this phase of life, when I was struggling to seek the meaning of life &#8211; I thought of making a visit to the book fair.</p>
+                    <p><br>I had been to the book fair earlier as well, but never in desperation. Never to seek answers. But this time it was different. I was seeking an intimate friend who would teach me how to get out of this mess without letting anyone sense my miseries. With this hope, I started the journey with you for the first time. And I wasn&#8217;t disappointed at all.</p>
+                    <p><br>Biographies presented through you gave me a compass for life. This made me realise how people have conquered themselves before conquering the world. The words of self-help strengthened my mental fortitude and allowed me to appreciate the fact that I was suffering much more in imagination than in reality. The philosophies coming through you filled my heart with warmth, love and joy. The timeless wisdom slowly began to penetrate through me.</p>
+                    <p><br>Gradually, you led me to see life again through the lens of hope and freedom. Probably this made me come out of my own imaginative cage.</p>
+                    <p><br>Couldn&#8217;t have been more grateful to you for carrying the words of Yogi Paramahansa Yogananda Ji through <em>Autobiography of a Yogi.</em> This completely changed my perspective on life. The belief in the philosophy of Karma was re-established. The slow spiritual awakening began to take place (yet there is a long way to go).</p>
+                    <p><br>Above and beyond this, I had found a friend who talks with me in my desperate time, who fills me with the warmth and joy whenever I demand and in return asks for nothing. Apart from this, you have filled me with courage to see the world as is.</p>
+                    <p><br>Without a shadow of doubt, there is a long way to go with you, but it was important to reflect and cherish the joy you have brought to my life. I wish many more would seek and find your companionship to embark on an adventurous journey.</p>
+                    <p><br>Yours truly<br>An Ordinary Human</p>
+                    <p>Some of the voices that spoke to me through you were:<br />1. The Alchemist (Paulo Coelho)<br />2. The Ignited minds (APJ Kalam)<br />3. The Art of Happiness (Dalai Lama)<br />4. Power of Now (Eckhart Tolle)<br />5. As a man thinketh (James Allen)<br />6. Tuesday with Morrie (Mitch Alboom)<br />7. Man&#8217;s search for meaning (Viktor Frankl)<br />8. Zen Mind, Beginner&#8217;s mind (Shunryu Suzuki)<br />9. Rashmi Rathi (Ramdhari Singh Dinkar)<br />10. Ikigai (Hector Gracia)<br />11. Empires of the Mind (Danis Waitley)<br />12. The Power of Subconscious mind (Dr Joseph Murphy)<br />13. The 5 AM club (Robin Sharma)<br />14. An Old Monk who sold his Ferrari (Robin Sharma)<br />15. Atomic Habits (James Clear)<br />16. Grit (Angela Duckworth)<br />17. One thing (Gary Keller)<br />18. Flow (Mihaly Csikszentmihaly)<br />19. Homo Deus (Yuval Noah Harari)<br />20. The Kite Runner (Khaled Hosseini)<br />&#8230;&#8230;.. And many more to come</p>
                 </div>
                 <div class="article-navigation">
                     <a href="memo-25.html" class="nav-button prev">← Previous Memo</a>
+                    <a href="memo-27.html" class="nav-button next">Next Memo →</a>
                 </div>
             </article>
         </div>
