new memo-28 added

--- a/memos/memo-27.html
+++ b/memos/memo-27.html
@@ -39,6 +39,7 @@
                 </div>
                 <div class="article-navigation">
                     <a href="memo-26.html" class="nav-button prev">← Previous Memo</a>
+                    <a href="memo-28.html" class="nav-button next">Next Memo →</a>
                 </div>
             </article>
         </div>
