update profile and postgres

--- a/diary.html
+++ b/diary.html
@@ -12,6 +12,8 @@
     <script src="js/config.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/api.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/nav.js"></script>
     <script src="js/diary.js"></script>
 </head>
 <body>
@@ -23,6 +25,7 @@
         <div class="nav-container">
             <a href="index.html" class="nav-link">Home</a>
             <a href="diary.html" class="nav-link active">Diary</a>
+            <a href="login.html" class="nav-link" id="navLogin">Login</a>
         </div>
     </nav>
 
