--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&family=Cormorant+Garamond:wght@300;400;500;600;700&family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/config.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/nav.js"></script>
 </head>
 <body>
     <div class="spring-background">
@@ -18,6 +23,7 @@
         <div class="nav-container">
             <a href="index.html" class="nav-link active">Home</a>
             <a href="diary.html" class="nav-link">Diary</a>
+            <a href="login.html" class="nav-link" id="navLogin">Login</a>
         </div>
     </nav>
 
